Use MEMORY param $1